<resources>
    <string name="app_name">My Spotify</string>
    <string name="title_intro">Listen to millions of song with spotify.</string>
    <string name="sign_in_with_spotify">Sign In with Spotify</string>
    <string name="cd_bottom_navigation_search">Bottom navigation search</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search">What do you want to listen to?</string>
    <string name="search_item_description">%1$s • %2$s</string>
    <string name="track">Track</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="playlist">Playlist</string>
    <string name="show">Show</string>
    <string name="episode">Episode</string>
    <string name="audiobook">Audiobook</string>
    <string name="followers">%1$d followers</string>
    <string name="followers_formatted">%1$s followers</string>
    <string name="label_search">Search</string>
    <string name="label_search_history">Search History</string>
    <string name="label_profile">Profile</string>
    <string name="profile_item_description">%1$d followers • %2$s</string>
    <string name="home">Home</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="songname">SongName</string>
    <string name="song_name">Song Name</string>
    <string name="play">Play</string>
    <string name="playlists">Playlists</string>
    <string name="podcast">Podcast</string>
    <string name="user_library">User Library</string>
    <string name="all">All</string>
    <string name="related_artist">Related Artist</string>
    <string name="all_episodes">All Episodes</string>
    <string name="see_more">See more</string>
    <string name="library">Library</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_night">Good Night</string>
    <string name="good_evening">Good Evening</string>
    <string name="Artist">Artist</string>
    <string name="playing_from">Playing from %1$s</string>
    <string name="profile">Profile</string>
</resources>